Дописал логику контроллеров для лобби и пользователей. Добавил контроллер для присоединения пользователя к лобби
