# src/internal/models/lobbyUser.go
@@ -1,0 +1,6 @@
+package models
+
+type LobbyUser struct {
+	LobbyID string `json:"lobby_id"`
+	UserID  string `json:"user_id"`
+}
